# Yolo-Explorer

./: CHECKLIST.md  Design.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
backend/: .env.example  .gitignore  README.md
backend/scripts/: setup_index.py
backend/src/: config.py  database.py  embedder.py  generator.py  indexer.py  main.py
frontend/: app.py
